--- a/package.json
+++ b/package.json
@@ -20,17 +20,21 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ionic-native/call-number": "^5.21.5",
     "@ionic-native/core": "^5.20.0",
     "@ionic-native/image-picker": "^5.20.0",
     "@ionic-native/social-sharing": "^5.20.0",
     "@ionic-native/splash-screen": "^5.20.0",
     "@ionic-native/status-bar": "^5.20.0",
     "@ionic/angular": "^4.11.10",
+    "@types/leaflet": "^1.5.8",
+    "call-number": "^1.0.1",
     "cordova-plugin-telerik-imagepicker": "^2.3.3",
     "cordova-plugin-x-socialsharing": "^5.6.3",
     "core-js": "^2.6.11",
     "es6-promise-plugin": "^4.2.2",
     "firebase": "^7.7.0",
+    "leaflet": "^1.6.0",
     "rxjs": "^6.5.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -79,7 +83,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "mx.ferreyra.callnumber": {}
     },
     "platforms": [
       "android"
